# Agora

./: Cargo.toml  README.md
client/: Cargo.toml
core/: Cargo.toml
goals/: README.md
server/: Cargo.toml
server/config/: defaults.hjson
server/src/: lib.rs  main.rs  settings.rs
