[package]
name = "agora_server"
version = "0.1.0"
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-files = "0.2.2"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
async-trait = "0.1.33"
barrel = { version = "0.6.5", features = ["pg"] }
chrono = { version = "0.4.11", features = ["serde"] }
config = "0.10.1"
dotenv = "0.15.0"
hjson = "0.8.2"
jsonwebtoken = "7.1.0"
lazy_static = "1.4.0"

eyre = "0.4.3"
color-eyre = "0.3.4"
tracing = "0.1"

log = "0.4"
pretty_env_logger = "0.4"

refinery = { version = "0.3.0", features = ["postgres"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order"]}
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.dev.package.backtrace]
opt-level = 3
